www/css/style.css
html,
body,
#app {
    position: relative;
    height: 100%;
    min-height: 100%;
    width: 100%;
    min-width: 100%;
    padding: 0;
    margin: 0;
}

header,
main,
footer {
    padding-left: 240px;
}

.nav-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
}

.top-nav {
    box-shadow: none;
    font-size: 32px;
    -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 992px) {
    header,
    main,
    footer {
        padding-left: 0;
    }
}

@media only screen and (min-width: 992px) {
    .nav-wrapper {
        display: initial;
        align-items: initial;
        justify-content: initial;
    }
}

nav {
    background-color: transparent; !important;
}

nav a{
    color: #424242; !important;
}
.side-nav .collapsible-body li.active {
    background-color: #424242 !important;
}

.side-nav .collapsible-body li.active,
.side-nav.fixed .collapsible-body li.active {
    background-color: #26a69a !important;
}

.btn,
.btn-large {
    background-color: #757575 !important;
}

.sidenav-header {
    background-image: url("../img/wallpaper_polygons.jpg") !important;
    background-size: 150% 500%;
    background-repeat: no-repeat;
    color: white !important;
}

.sidenav-header a {
    background-color: #424242 !important;
    color: white !important;
    height: initial !important;
    line-height: initial !important;
}

.flex, .flex1 {
    position: relative;
    display: flex !important;
    align-items: center !important;
    padding: 12px;
}

.flex i{
    position: absolute;
    right: 12px;
    top : 18px;
}

.side-nav li {
    padding: 15px;
}

/*****************************************
Switch
*****************************************/
.Switch {
    position: relative;
    margin-left: 15px;
    display: inline-block;
    font-size: 1.6em;
    font-weight: bold;
    color: #ccc;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    height: 14px;
    padding: 6px 6px 5px 6px;
    border-radius: 4px;
    cursor: pointer;
}

body.IE7 .Switch {
    width: 78px;
}

.Switch span {
    display: inline-block;
    width: 35px;
}

.Switch span.On {
    color: #33d2da;
}

.Switch .Toggle {
    position: absolute;
    top: -4px;
    width: 37px;
    height: 25px;
    -webkit-transition: all 0.15s ease-in-out;
    -moz-transition: all 0.15s ease-in-out;
    -o-transition: all 0.15s ease-in-out;
    -ms-transition: all 0.15s ease-in-out;
}

.Switch.On .Toggle {
    left: 54%;
}

.Switch.Off .Toggle {
    left: 2%;
}

/* Round Switch */
/* Round Switch */
.Switch.Round {
    padding: 0px 20px;
    border-radius: 40px;
}

body.IE7 .Switch.Round {
    width: 1px;
}

.Switch.Round .Toggle {
    border-radius: 50%;
    width: 22px;
    height: 22px;
}

.Switch.Round.On .Toggle {
    left: 64%;
    background-color:#26a69a;
}

.Switch.Round.Off .Toggle {
    left: -14%;
    background-color: #BDBDBD;
}

.Switch.Round.On {
    background-color: #84c7c1;
}

.Switch.Round.Off {
    background-color: #818181;
}

.TransportSwitch.Round.On {
    background-color: #84c7c1;
}

.TransportSwitch.Round.Off {
    background-color: #818181;
}
/*
  When creating your CSS selector,
  change "brown" to something of your choosing
  */
.addbtn{
  display: flex;
  align-items: center;
  justify-content: center;
    background-color: #5E35B1 !important;
}
.scanbtn{
  display: flex;
  align-items: center;
    background-color: #5E35B1 !important;
}
svg{
  -webkit-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.circle_animation {
  stroke-dasharray: 220;
  /* this value is the pixel circumference of the circle */
  stroke-dashoffset: 220;
}
 .waves-effect.waves-brown .waves-ripple {
   /* The alpha value allows the text and background color
   of the button to still show through. */
   background-color: rgba(121, 85, 72, 0.65);
  }

#totpAddAccount, #totpAddAccountScan{
   padding:30px;
   color:#039be5 ;
   border-bottom : 1px solid gray
}
ul.collection {
  border:none
}

/* css for the timer */
.timer{

    /*style="vertical-align:top;";*/
    /*style="horizontal-align:top;";
*/
  /*position: static;*/
}
#circle1{
  stroke:#0288d1;
  stroke-linecap: butt;
  fill: transparent;
}

